[package]
name = "hydiscovery"
version = "0.8.0"
edition = "2021"
description = "Discovery for hyper services"
license = "MIT"
repository = "https://github.com/alexrudy/hydiscovery"
documentation = "https://docs.rs/hydiscovery"
rust-version = "1.74"
readme = "README.md"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hyper", "http", "server", "async"]


[dependencies]
camino = { version = "1", default-features = false }
dashmap = { version = "6" }
futures-util = "0.3"
http = { version = "1" }
http-body = { version = "1" }
humantime-serde = { version = "1.1.1", optional = true }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "^0.1" }
pidfile = { version = "0.1", package = "pidfile2" }

[dependencies.tower]
version = "0.4"
features = ["make", "util"]
default-features = false

[dependencies.hyperdriver]
version = "0.8"
features = ["client", "server"]

[features]
default = []
serde = ["dep:serde", "dep:humantime-serde", "camino/serde1"]

[dev-dependencies]
static-assertions = { version = "1", package = "static_assertions" }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[package.metadata.cargo-udeps.ignore]
normal = ["humantime-serde"]

[package.metadata.docs.rs]
all-features = true
